--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -12,6 +12,8 @@ tree:
   -
     entry: 7840f9f9-3fba-4608-b877-250f18e634b2
   -
+    entry: 83389b84-3d9d-43ad-956c-223c261062cc
+  -
     entry: 03aa1ce0-5b6a-42bc-b339-4972338cdada
   -
     entry: 35fe78ba-35d3-44a4-b514-55167c5e514c
