--- a/public/assets/uploads/insights/.meta/larafest-2022-drinks-2.jpg.yaml
+++ b/public/assets/uploads/insights/.meta/larafest-2022-drinks-2.jpg.yaml
@@ -1,7 +1,7 @@
 data: {  }
-size: 157716
-last_modified: 1686574272
-width: 1280
-height: 853
+size: 6881474
+last_modified: 1686574182
+width: 5184
+height: 3456
 mime_type: image/jpeg
 duration: null
