--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "config": {
         "optimize-autoloader": true,
-        "preferred-install": "dist",
+        "preferred-install": "source",
         "sort-packages": true,
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
