--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
     "private": true,
     "scripts": {
-        "dev": "mix",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
+    "type": "module",
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.1",
-        "autoprefixer": "^10.4.0",
+        "autoprefixer": "^10.4.21",
         "browser-sync": "^2.27.9",
         "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0",
         "css-loader": "^5.2.7",
         "laravel-mix": "^6.0",
-        "postcss": "^8.4.5",
+        "postcss": "^8.5.3",
         "postcss-import": "^14.0.1",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.51.0",
@@ -31,6 +28,8 @@
         "gsap": "^3.10.4",
         "headroom.js": "^0.12.0",
         "highlight.js": "^11.10.0",
-        "swiper": "^8.1.5"
+        "laravel-vite-plugin": "^1.2.0",
+        "swiper": "^8.1.5",
+        "vite": "^6.2.2"
     }
 }
