--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,16 @@
     "type": "project",
     "require": {
         "php": "^8.3",
-        "laravel/framework": "^11.0",
+        "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10",
         "pecotamic/sitemap": "^1.4",
         "rocketeers-app/rocketeers-laravel": "^2.1",
-        "statamic/cms": "5.36.0"
+        "statamic/cms": "^5.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.15",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^11.0"
     },
     "config": {
         "optimize-autoloader": true,
