--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "module",
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/postcss": "^4.1.1",
         "@tailwindcss/typography": "^0.5.1",
         "autoprefixer": "^10.4.21",
         "browser-sync": "^2.27.9",
@@ -19,7 +20,7 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.51.0",
         "sass-loader": "^12.6.0",
-        "tailwindcss": "^3.0.19",
+        "tailwindcss": "^4.1.1",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
