--- a/content/trees/navigation/main.yaml
+++ b/content/trees/navigation/main.yaml
@@ -1,51 +1,35 @@
 tree:
   -
-    id: 283ccda1-c507-41f9-90c7-71f0b7bedac3
-    title: Home
-    data:
-      page: home
+    id: 83ea7791-50e3-45a1-9682-b9a40244a7da
+    title: Laravel
+    url: '#'
+    children:
+      -
+        id: a3439037-a3be-4fd8-ac30-71d05725cd3c
+        entry: b343e99d-f01e-4cd1-8587-cf8e99ccec76
+      -
+        id: cc80b938-34b4-4526-8ff1-e1f0ee043c9d
+        entry: fedf1b6c-91e0-4ec7-920d-5d05d3007f22
+      -
+        id: dd5bf3ce-7847-4aab-98e4-0cdca75518c7
+        entry: 83389b84-3d9d-43ad-956c-223c261062cc
   -
-    id: 44a62561-5453-40b2-9974-34b29469712c
-    title: 'Wat is Laravel?'
-    data:
-      page: b343e99d-f01e-4cd1-8587-cf8e99ccec76
+    id: 8191f4bc-14a4-4911-a3d5-c9d282bb0946
+    entry: 7840f9f9-3fba-4608-b877-250f18e634b2
   -
-    id: 26a01c25-00a0-4559-a4e6-14fb9386c9d5
-    title: 'Over ons'
-    data:
-      page: c2893d75-5eb2-4840-b20d-d222a9155b4c
+    id: dd6b974d-bb49-4945-b984-75f0f8b0a320
+    entry: 645047c0-702b-40fd-9f72-621e0803318b
   -
-    id: d4ea6e70-4705-497f-a3cb-04769aad95d3
-    title: 'Onze leden'
-    data:
-      page: 645047c0-702b-40fd-9f72-621e0803318b
+    id: 7090262c-8100-4638-93bc-8b9e02891211
+    title: Over
+    url: '#'
+    children:
+      -
+        id: 7b4e4030-5766-4cb0-bd98-2ab81506ec70
+        entry: c2893d75-5eb2-4840-b20d-d222a9155b4c
+      -
+        id: 11cdc56a-d8b5-45ce-9126-e0b8b1fdaa43
+        entry: 35fe78ba-35d3-44a4-b514-55167c5e514c
   -
-    id: a9a9f3cb-c737-4d8e-99b9-18e4b50c60f3
-    title: Cases
-    data:
-      page: fedf1b6c-91e0-4ec7-920d-5d05d3007f22
-  -
-    id: 61836e23-68fd-4dad-9b90-af1fd1a00586
-    title: Insights
-    data:
-      page: 7840f9f9-3fba-4608-b877-250f18e634b2
-  -
-    id: baea41fd-e38d-42e6-a85d-6d2cbdbad34b
-    title: Knowledge
-    data:
-      page: 83389b84-3d9d-43ad-956c-223c261062cc
-  -
-    id: 0686089d-49e7-4e88-bb03-6b4a1374262b
-    title: Agenda
-    data:
-      page: 03aa1ce0-5b6a-42bc-b339-4972338cdada
-  -
-    id: 350214a4-8b3f-408b-81d7-f5011ae39345
-    title: Contact
-    data:
-      page: 35fe78ba-35d3-44a4-b514-55167c5e514c
-  -
-    id: 253a4fa6-e399-4960-937e-e781b5fa39c5
-    title: 'Lid worden'
-    data:
-      page: 3e84afec-448e-4805-8eed-8e209475a28e
+    id: d4685f2c-bae9-4bf1-ab4a-21139b9c2da8
+    entry: 03aa1ce0-5b6a-42bc-b339-4972338cdada
