--- a/resources/blueprints/navigation/main.yaml
+++ b/resources/blueprints/navigation/main.yaml
@@ -1,18 +1,6 @@
-sections:
+tabs:
   main:
     display: Main
-    fields:
+    sections:
       -
-        handle: page
-        field:
-          max_items: 1
-          mode: default
-          create: true
-          collections:
-            - pages
-          display: Pagina
-          type: entries
-          icon: entries
-          listable: hidden
-          instructions_position: above
-          read_only: false
+        display: 'Nieuwe sectie'
