--- a/content/collections/insights.yaml
+++ b/content/collections/insights.yaml
@@ -1,13 +1,18 @@
-title: Insights
+title: Nieuws
 template: insights/show
 layout: layout
 revisions: false
-route: '/insights/{slug}'
+route: '/nieuws/{slug}'
 date: true
 sort_dir: desc
 date_behavior:
   past: public
   future: private
+preview_targets:
+  -
+    label: Entry
+    url: '{permalink}'
+    refresh: true
 structure:
   root: false
   max_depth: 1
