--- a/content/collections/knowledge.yaml
+++ b/content/collections/knowledge.yaml
@@ -1,13 +1,18 @@
-title: Knowledge
+title: Kennis
 template: knowledge/show
 layout: layout
 revisions: false
-route: '/knowledge/{slug}'
+route: '/kennis/{slug}'
 date: true
 sort_dir: desc
 date_behavior:
   past: public
   future: private
+preview_targets:
+  -
+    label: Entry
+    url: '{permalink}'
+    refresh: true
 structure:
   root: false
   max_depth: 1
