--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /public/hot
 /public/static
 /public/storage
+/public/assets
+/public/build
 /public/vendor/statamic
 /vendor
 .env
@@ -13,4 +15,4 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .DS_Store
-storage
+public/mix-manifest.json
