--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/assets/js/site.js": "/assets/js/site.js?id=7485c68f6dc11867317ba5fc834b8468",
-    "/assets/css/tailwind.css": "/assets/css/tailwind.css?id=303cd6c866e00fac23d6ce62858db94a"
+    "/assets/js/site.js": "/assets/js/site.js",
+    "/assets/css/tailwind.css": "/assets/css/tailwind.css"
 }
